# luna8i-judge

./: .env.example  LICENSE  README.md  pyproject.toml
backend/src/: render.bundle.js
examples/image_captioning/: README.md  build_dataset.py  golden_dataset.jsonl  ground_truth.jsonl  input.jsonl  ollama__llava.jsonl  ollama__minicpm-v.jsonl  output_schema.json  report.html  scale_and_cost_report.json
src/: db.py  env.py  exceptions.py  main.py  render.bundle.js
src/agents/: detect_workload.py  generate_golden_dataset.py  inference_runner.py  job_runner.py  pipeline_log.py  run_compare_models_evaluation.py  run_compare_models_inference.py  scale_and_cost_projection.py
src/cli/: __init__.py  hosted.py  infra.py  jobs.py  managed.py  models.py  providers.py
src/providers/: adapters.py  client.py  hosted_model_registry.py  infra_registry.py  managed_model_provider_constants.py  managed_model_registry.py  openai_compatible_adapter.py
src/routers/: infra.py  jobs.py  managed_model_providers.py  models.py  providers.py
src/schemas/: db.py  jobs.py  models.py  providers.py  scale_and_cost.py
src/services/: jobs.py  (+5 more)
tests/: conftest.py  test_client.py  test_compare_models_patch.py  test_db.py  test_detect_workload.py  test_generate_golden_dataset.py  test_infra_registry.py  test_job_runner.py  test_jobs_router.py  test_managed_model_registry.py  test_model_adapter.py  test_models.py  test_models_router.py  test_report_router.py  test_run_compare_models_evaluation.py  test_run_compare_models_inference.py  test_run_inference.py  test_scale_and_cost_projection.py
(+9 files in other folders)
