[project]
name = "luna8i-judge"
version = "0.1.1"
description = "Benchmark tool for LLM batch workloads — compare cost and quality across candidate models vs. a SOTA baseline."
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "fastapi==0.138.0",
    "uvicorn[standard]==0.49.0",
    "pydantic==2.13.4",
    "python-multipart==0.0.32",
    "pydantic-settings==2.9.1",
    "sqlmodel>=0.0.22",
    "openai==2.43.0",
    "anthropic==0.111.0",
    "together==2.16.1",
    "langgraph==1.2.6",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-cov==6.1.0",
    "pytest-xdist==3.6.1",
    "ruff==0.15.18",
    "pre-commit==4.6.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"src" = ["render.bundle.js"]

[project.scripts]
luna8i-judge = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
omit = ["tests/*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
